--- a/src/main/resources/templates/admin/movie/list.html
+++ b/src/main/resources/templates/admin/movie/list.html
@@ -341,7 +341,7 @@
 
                             });
 
-                            axios.post('/api/movie/update', movieData)
+                            axios.post('/api/movie/updateMany', movieData)
                                 .then(res => console.log(res))
                                 .catch(err => console.log("Error: " + err));
                         });
