241007 1558 스케줄 정보 등록 템플릿 새로 만들고 컨트롤러 연결함

--- a/src/main/resources/templates/admin/form-advanced.html
+++ b/src/main/resources/templates/admin/form-advanced.html
@@ -901,7 +901,7 @@
                                     <ol class="breadcrumb m-0">
                                         <li class="breadcrumb-item"><a href="javascript: void(0);">Velonic</a></li>
                                         <li class="breadcrumb-item"><a href="javascript: void(0);">Forms</a></li>
-                                        <li class="breadcrumb-item active">Form Advanced</li>
+                                        <li class="breadcrumb-item active"></li>
                                     </ol>
                                 </div>
                                 <h4 class="page-title">Form Advanced</h4>
@@ -1990,8 +1990,8 @@
 
     <!-- Typehead Plugin js -->
     <script th:src="@{/admin/assets/vendor/handlebars/handlebars.min.js}"></script>
-    <script th:
-    @{/>admin/!-- Flatpickr Timepicker Plugin js -->
+
+    <!-- Flatpickr Timepicker Plugin js -->
     <script th:src="@{/admin/assets/vendor/flatpickr/flatpickr.min.js}"></script>
 
     <!-- Typehead Demo js -->
