--- a/src/main/resources/templates/admin/form-elements.html
+++ b/src/main/resources/templates/admin/form-elements.html
@@ -1860,7 +1860,7 @@
                             <div class="form-check form-switch card-switch mb-1">
                                 <input class="form-check-input" type="checkbox" name="data-bs-theme" id="layout-color-light" value="light">
                                 <label class="form-check-label" for="layout-color-light">
-                                    <img src="assets/images/layouts/light.png" alt="" class="img-fluid">
+                                    <img th:src="@{/admin/assets/images/layouts/light.png}" alt="" class="img-fluid">
                                 </label>
                             </div>
                             <h5 class="font-14 text-center text-muted mt-2">Light</h5>
@@ -1870,9 +1870,8 @@
                             <div class="form-check form-switch card-switch mb-1">
                                 <input class="form-check-input" type="checkbox" name="data-bs-theme" id="layout-color-dark" value="dark">
                                 <label class="form-check-label" for="layout-color-dark">
-                                    <img src="assets/images/layouts/dark.png" alt="" class="img-fluid">
-                                </label>
-                            </div>
+                                    <img th:src="@{/admin/assets/images/layouts/dark.png}" alt="" class="img-flth:uid">@{/admin/</label>
+                      }      </div>
                             <h5 class="font-14 text-center text-muted mt-2">Dark</h5>
                         </div>
                     </div>
@@ -1885,7 +1884,7 @@
                                 <div class="form-check form-switch card-switch mb-1">
                                     <input class="form-check-input" type="checkbox" name="data-layout-mode" id="layout-mode-fluid" value="fluid">
                                     <label class="form-check-label" for="layout-mode-fluid">
-                                        <img src="assets/images/layouts/light.png" alt="" class="img-fluid">
+                                        <img th:src="@{/admin/assets/images/layouts/light.png}" alt="" class="img-fluid">
                                     </label>
                                 </div>
                                 <h5 class="font-14 text-center text-muted mt-2">Fluid</h5>
@@ -1896,7 +1895,7 @@
                                     <div class="form-check form-switch card-switch mb-1">
                                         <input class="form-check-input" type="checkbox" name="data-layout-mode" id="layout-mode-boxed" value="boxed">
                                         <label class="form-check-label" for="layout-mode-boxed">
-                                            <img src="assets/images/layouts/boxed.png" alt="" class="img-fluid">
+                                            <img th:src="@{/admin/assets/images/layouts/boxed.png}" alt="" class="img-fluid">
                                         </label>
                                     </div>
                                     <h5 class="font-14 text-center text-muted mt-2">Boxed</h5>
@@ -1912,7 +1911,7 @@
                             <div class="form-check form-switch card-switch mb-1">
                                 <input class="form-check-input" type="checkbox" name="data-topbar-color" id="topbar-color-light" value="light">
                                 <label class="form-check-label" for="topbar-color-light">
-                                    <img src="assets/images/layouts/light.png" alt="" class="img-fluid">
+                                    <img th:src="@{/admin/assets/images/layouts/light.png}" alt="" class="img-fluid">
                                 </label>
                             </div>
                             <h5 class="font-14 text-center text-muted mt-2">Light</h5>
@@ -1922,7 +1921,7 @@
                             <div class="form-check form-switch card-switch mb-1">
                                 <input class="form-check-input" type="checkbox" name="data-topbar-color" id="topbar-color-dark" value="dark">
                                 <label class="form-check-label" for="topbar-color-dark">
-                                    <img src="assets/images/layouts/topbar-dark.png" alt="" class="img-fluid">
+                                    <img th:src="@{/admin/assets/images/layouts/topbar-dark.png}th:" alt@{/admin/"" class="img-fluid">
                                 </label>
                             </div>
                             <h5 class="font-14 text-center text-muted mt-2">Dark</h5>
@@ -1937,7 +1936,7 @@
                                 <div class="form-check form-switch card-switch mb-1">
                                     <input class="form-check-input" type="checkbox" name="data-menu-color" id="leftbar-color-light" value="light">
                                     <label class="form-check-label" for="leftbar-color-light">
-                                        <img src="assets/images/layouts/sidebar-light.png" alt="" class="img-fluid">
+                                        <img th:src="@{/admin/assets/images/layouts/sidebar-light.png}" alt="" class="img-fluid">
                                     </label>
                                 </div>
                                 <h5 class="font-14 text-center text-muted mt-2">Light</h5>
@@ -1947,7 +1946,7 @@
                                 <div class="form-check form-switch card-switch mb-1">
                                     <input class="form-check-input" type="checkbox" name="data-menu-color" id="leftbar-color-dark" value="dark">
                                     <label class="form-check-label" for="leftbar-color-dark">
-                                        <img src="assets/images/layouts/light.png" alt="" class="img-fluid">
+                                        <img th:src="@{/admin/assets/images/layouts/light.png}" alt="" class="img-fluid">
                                     </label>
                                 </div>
                                 <h5 class="font-14 text-center text-muted mt-2">Dark</h5>
@@ -1963,7 +1962,7 @@
                                 <div class="form-check form-switch card-switch mb-1">
                                     <input class="form-check-input" type="checkbox" name="data-sidenav-size" id="leftbar-size-default" value="default">
                                     <label class="form-check-label" for="leftbar-size-default">
-                                        <img src="assets/images/layouts/light.png" alt="" class="img-fluid">
+                                        <img th:src="@{/admin/assets/images/layouts/light.png}" alt="" class="img-fluid">
                                     </label>
                                 </div>
                                 <h5 class="font-14 text-center text-muted mt-2">Default</h5>
@@ -1973,7 +1972,7 @@
                                 <div class="form-check form-switch card-switch mb-1">
                                     <input class="form-check-input" type="checkbox" name="data-sidenav-size" id="leftbar-size-compact" value="compact">
                                     <label class="form-check-label" for="leftbar-size-compact">
-                                        <img src="assets/images/layouts/compact.png" alt="" class="img-fluid">
+                                        <img th:src="@{/admin/assets/images/layouts/compact.png}" alt="" class="img-fluid">
                                     </label>
                                 </div>
                                 <h5 class="font-14 text-center text-muted mt-2">Compact</h5>
