--- a/src/main/resources/templates/admin/movie/register.html
+++ b/src/main/resources/templates/admin/movie/register.html
@@ -101,7 +101,7 @@
                         console.log("이미지 저장 성공!");
                         alert("이미지 저장 성공!");
                         console.log("저장한 이미지 리스트: " + res.data);
-                        window.location.href = "/api/admin/movie/list";
+                        window.location.href = "/api/admin/movie";
                     } else {
                         console.log("이미지 저장 실패!");
                         alert("이미지 저장 실패!");
