241007 1905 theater, movie register 템플릿 새로 연결중

--- a/src/main/resources/templates/admin/schedule/register.html
+++ b/src/main/resources/templates/admin/schedule/register.html
@@ -878,12 +878,12 @@
                             <div class="page-title-box">
                                 <div class="page-title-right">
                                     <ol class="breadcrumb m-0">
-                                        <li class="breadcrumb-item"><a href="javascript: void(0);">Velonic</a></li>
-                                        <li class="breadcrumb-item"><a href="javascript: void(0);">Forms</a></li>
-                                        <li class="breadcrumb-item active">Form Elements</li>
+                                        <li class="breadcrumb-item"><a href="javascript: void(0);">Moviemates</a></li>
+                                        <li class="breadcrumb-item"><a href="javascript: void(0);">Schedule</a></li>
+                                        <li class="breadcrumb-item active">Register Form</li>
                                     </ol>
                                 </div>
-                                <h4 class="page-title">Form Elements</h4>
+                                <h4 class="page-title">Schedule Register Form</h4>
                             </div>
                         </div>
                     </div>
@@ -893,7 +893,7 @@
                         <div class="col-12">
                             <div class="card">
                                 <div class="card-header">
-                                    <h4 class="header-title">Input Types</h4>
+                                    <h4 class="header-title">Schedule Register</h4>
                                 </div>
                                 <div class="card-body">
                                     <div class="row">
@@ -931,7 +931,7 @@
 
                                                 <div class="justify-content-end row">
                                                     <div class="col-9 text-end">
-                                                        <button type="submit" class="btn btn-info">Sign in</button>
+                                                        <button type="submit" class="btn btn-info">Register</button>
                                                     </div>
                                                 </div>
                                             </form>
