--- a/src/main/resources/templates/admin/theater/register2.html
+++ b/src/main/resources/templates/admin/theater/register2.html
@@ -114,8 +114,8 @@
         const name = document.getElementById('inputName').value;
 
         const postcode = document.getElementById('postcode').value;
-        const address = document.getElementById("address").value;
-        const extraAddr = document.getElementById("extraAddress").value;
+        const address = document.getElementById("inputAddress").value;
+        const extraAddr = document.getElementById("inputExtraAddress").value;
         const location = address + extraAddr + "(" + postcode + ")";
         alert(location)
 
